# CodeDreamer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: base-rules.mdc  changelog.mdc  how-to-rules.mdc  stack-rules.mdc
codedreamer/: __init__.py  cli.py  conductor.py  config.py  daemon.py  dreamer.py  drill_state.py  graph.py  indexer.py  leaderboard.py  llm.py  llm_ollama.py  loop_detector.py  models.py  models_ollama.py  proactive.py  reflection.py  scratch.py  server.py  trm.py  validator.py
codedreamer/static/: index.html
docs/: APPLIED_DREAMS.md  changelog.md  eli5.md  graph_edges.md  overview.md  proactive_memory.md
docs/changelog/: changelog.md
dreams_archive/archive_codedreamer_20251230_110910/: dream_20251229_191401_code_idea.md  dream_20251229_191459_code_idea.md  dream_20251229_191750_code_idea.md  dream_20251229_192309_code_fix.md  dream_20251229_192650_code_idea.md  dream_20251229_193718_code_fix.md  dream_20251229_194240_code_fix.md  dream_20251229_194340_code_idea.md  dream_20251229_194612_code_fix.md  dream_20251229_194917_code_idea.md  dream_20251229_195517_code_fix.md  dream_20251229_195801_code_idea.md  dream_20251229_200244_code_fix.md  dream_20251229_200549_code_fix.md  dream_20251229_201450_code_fix.md  dream_20251229_201747_code_idea.md  dream_20251229_201942_code_idea.md  dream_20251229_202950_code_fix.md  dream_20251229_203135_code_idea.md  dream_20251229_203425_code_idea.md  dream_20251229_203708_code_idea.md  dream_20251229_203847_code_idea.md  dream_20251229_204155_code_idea.md  dream_20251229_204841_code_fix.md  dream_20251229_205109_code_idea.md  dream_20251229_210724_code_idea.md  dream_20251229_211025_code_idea.md  dream_20251229_211329_code_idea.md  dream_20251229_211435_code_idea.md  dream_20251229_211709_code_idea.md  dream_20251229_212053_code_idea.md  dream_20251229_212653_code_idea.md  dream_20251229_212959_code_fix.md  dream_20251229_213255_code_idea.md  dream_20251229_213554_code_fix.md  dream_20251229_213911_code_fix.md  dream_20251229_214438_code_idea.md  dream_20251229_214609_code_fix.md  dream_20251229_215348_code_idea.md  dream_20251229_215953_code_fix.md  (+194 more)
tests/: test_config.py  test_graph.py  test_scratch.py  test_validator.py
