[project]
name = "codedreamer"
version = "0.1.0"
description = "Autonomous code improvement suggestions via LLM dreaming"
authors = [{name = "Josh Angel", email = "josh@strakergroup.com"}]
requires-python = ">= 3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "code-analysis", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.9",
    "rich>=13.0",
    "chromadb>=0.5",
    "apscheduler>=3.10",
    "networkx>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
# Note: llama-cpp-python is installed separately with CUDA via `pixi run setup-cuda`

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
codedreamer = "codedreamer.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.0"

[tool.pixi.pypi-dependencies]
codedreamer = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12.*"
pip = ">=25.3,<26"
cuda-toolkit = ">=12.8"
cmake = ">=3.28"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.0"
mypy = ">=1.0"
ruff = ">=0.1"

[tool.pixi.environments]
default = ["dev"]

[tool.pixi.tasks]
test = "pytest tests/ -v"
lint = "ruff check codedreamer/"
typecheck = "mypy codedreamer/"
dream = "python -m codedreamer.cli dream --once"
serve = "python -m codedreamer.cli serve"

# Install llama-cpp-python with CUDA support
# Set CUDACXX and CUDA_PATH env vars before running if not using pixi's cuda-toolkit
setup-cuda = """
CMAKE_ARGS="-DGGML_CUDA=on" \
pip install llama-cpp-python --force-reinstall --no-cache-dir \
--config-settings=cmake.args="-DGGML_CUDA=on"
"""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
